# KeAo-Artemis

./: .gitmodules  README.md
Artemis_PDU/firmware/src/: app.c  app.h  main.c  pdu_packet.c  pdu_packet.h
Beaglebone/: README.md
Beaglebone/programs/agents/: agent_radio2.cpp
PDU/firmware/src/: Adafruit_BusIO_Register.h  Adafruit_I2CDevice.h  Adafruit_INA219.cpp  main.c  spi_master.c  temp.c
Raspberry Pi/: README.md
Raspberry Pi/COSMOS/: README.md
Raspberry Pi/COSMOS/rfm69/: README.md
Raspberry Pi/COSMOS/rfm69/source/: CMakeLists.txt  CMakeLists.txt.user.b4ee741.22  QtCreatorDeployment.txt  agent_rfm69.cpp
Raspberry Pi/COSMOS/rfm69/source/libraries/: rfm69.cpp
Raspberry Pi/i2c/: hello.txt  oogabooga.randomextension  pi_i2c_master  send  send_file.cpp  teensy_i2c.cpp  test.txt
Raspberry Pi/programs/agents/: agent_radio2.cpp
Raspberry Pi/rfm69/rfm69cpp/: README.md  makefile  ping_pong1.cpp  ping_pong2.cpp  radio1.cpp  radio2.cpp  rfm69.cpp  rfm69.h
Raspberry Pi/rfm69cpp/: README.md  agent_radio2.cpp  makefile  rfm69.cpp  rfm69.h
Raspberry Pi/spi/: teensy_spi  teensy_spi.cpp  teensy_spi.py  teensy_spi_2  teensy_spi_2.cpp  teensy_spi_3.cpp
Raspberry Pi/uart/: teensy_uart.py  uart2.py
Teensy/FreeRTOS/src/: main.cpp
Teensy/Radio/: rfm69_9x.ino  rfm69_obc_recv.ino  rfm69_obc_send.ino  rfm9x_recv.ino
Teensy/agent_artemis/: platformio.ini
Teensy/agent_artemis/include/: artemisbeacons.h  common_def.h
Teensy/agent_artemis/src/: main.cpp
Teensy/agent_ground/src/: main.cpp
Teensy/keao_fsw/: .gitignore  platformio.ini
Teensy/keao_fsw/include/: artemis_devices.h  (+2 more)
Teensy/keao_ground/: platformio.ini
Teensy/radio/: README.md
programs/agents/: agent_radio2.cpp
(+211 files in other folders)
